load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

expand_template(
    name = "labels",
    out = "labels.txt",
    stamp_substitutions = {
        "APP_VERSION": "{{STABLE_DOCKER_TAG}}",
        "NUMBER_COMMITS_ON_BRANCH": "{{NUMBER_COMMITS_ON_BRANCH}}",
    },
    template = [
        "name=CockroachDB Operator",
        "vendor=Cockroach Labs",
        "release=NUMBER_COMMITS_ON_BRANCH",
        "version=APP_VERSION",
        "summary=CockroachDB is a distributed SQL database",
        "description=CockroachDB is a PostgreSQL wire-compatible distributed SQL database",
        "maintainer=Cockroach Labs",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "prep_webhooks.go",
    ],
    importpath = "github.com/cockroachdb/cockroach-operator/cmd/cockroach-operator",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/v1alpha1:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/resource:go_default_library",
        "//pkg/security:go_default_library",
        "//pkg/utilfeature:go_default_library",
        "@com_github_cockroachdb_errors//:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/cache:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)

pkg_tar(
    name = "licenses",
    srcs = ["//:license"],
    mode = "0755",
    package_dir = "/licenses",
)

oci_image_index(
    name = "index",
    images = [
        ":cockroach_image_linux_amd64",
        ":cockroach_image_linux_arm64",
    ],
    visibility = ["//visibility:public"],
)

oci_image(
    name = "cockroach_image_linux_amd64",
    # References container_pull from WORKSPACE
    base = "@redhat_ubi_minimal_linux_amd64",
    entrypoint = ["./cockroach-operator"],
    labels = ":labels",
    tars = [
        ":licenses",
        "//cmd/cockroach-operator/linux-amd64:cockroach-linux-amd64-tar",
        ":operator_image_linux_amd64",
    ],
)

oci_image(
    name = "cockroach_image_linux_arm64",
    # References container_pull from WORKSPACE
    base = "@redhat_ubi_minimal_linux_arm64_v8",
    entrypoint = ["./cockroach-operator"],
    labels = ":labels",
    tars = [
        ":licenses",
        "//cmd/cockroach-operator/linux-arm64:cockroach-linux-arm64-tar",
        ":operator_image_linux_arm64",
    ],
)

pkg_tar(
    name = "operator_image_linux_amd64",
    srcs = ["//cmd/cockroach-operator/linux-amd64:cockroach-operator-linux-amd64"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "operator_image_linux_arm64",
    srcs = ["//cmd/cockroach-operator/linux-arm64:cockroach-operator-linux-arm64"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cmd/cockroach-operator/linux-amd64:all-srcs",
        "//cmd/cockroach-operator/linux-arm64:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "cockroach-operator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
