# Copyright 2020 The Cockroach Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("//hack/build:kustomize.bzl", "kustomization")

# Builds the whole enchilada including the crds, rbac sa(s)/roles/bindings, manager
# deployment, and webhook configuration.
kustomization(
    name = "manifest",
    srcs = [
        ":all-srcs",
        "//config/crd:manifest.srcs",
        "//config/manager:manifest.srcs",
        "//config/rbac:manifest.srcs",
        "//config/webhook:manifest.srcs",
    ],
)

k8s_deploy(
    name = "image",
    images = {
        # when running locally, use the image from the local codebase
        "cockroach-operator:$(APP_VERSION)": "//cmd/cockroach-operator:operator_image",
    },
    resolver_args = ["--allow_unused_images"],
    template = ":manifest",
)

k8s_objects(
    name = "install",
    objects = [
        ":image",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
