# Copyright 2020 The Cockroach Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("//hack/build:kustomize.bzl", "kustomization")

# Builds the whole enchilada including the crds, rbac sa(s)/roles/bindings, manager
# deployment, and webhook configuration.
kustomization(
    name = "manifest",
    srcs = [
        ":all-srcs",
        "//config/crd:manifest.srcs",
        "//config/manager:manifest.srcs",
        "//config/rbac:manifest.srcs",
        "//config/webhook:manifest.srcs",
    ],
)

filegroup(
    name = "apply_k8s_script",
    srcs = ["apply_k8s.sh"],  # List the shell script here
    visibility = ["//visibility:public"],  # Make it accessible to other packages
)

# Use a shell script to apply the manifest via kubectl
sh_binary(
    name = "apply_k8s_app",
    srcs = ["apply_k8s.sh"],
    args = ["$(location :manifest)"],
    data = [":manifest"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
