# Copyright 2020 The Cockroach Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//hack/build:kustomize.bzl", "kustomization")

# This base is used for deployment to OpenShift (et al.). In includes all of the
# CSV, CRDs, RBAC details, deployments, samples, and the bundle scorecard tests.
kustomization(
    name = "manifest",
    srcs = [
        ":all-srcs",
        "//config/default:manifest.srcs",
        "//config/samples:manifest.srcs",
        "//config/scorecard:manifest.srcs",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
