load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach-operator/e2e/kubetest2-openshift",
    visibility = ["//visibility:private"],
    deps = [
        "//e2e/kubetest2-openshift/deployer:go_default_library",
        "@io_k8s_sigs_kubetest2//pkg/app:go_default_library",
    ],
)

go_binary(
    name = "kubetest2-openshift",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//e2e/kubetest2-openshift/deployer:all-srcs",
        "//e2e/kubetest2-openshift/types:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
