load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["openshift_packaging_test.go"],
    data = [
        "//examples:all-srcs",
        "//hack/bin:oc",
    ],
    deps = [
        "//pkg/kube:go_default_library",
        "//pkg/testutil/env:go_default_library",
        "@com_github_cenkalti_backoff//:go_default_library",
        "@com_github_go_logr_zapr//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@io_k8s_sigs_kubetest2//pkg/process:go_default_library",
        "@org_uber_go_zap//zaptest:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
