load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach-operator/hack/crdbversions",
    visibility = ["//visibility:private"],
    deps = ["@in_gopkg_yaml_v2//:go_default_library"],
)

go_binary(
    name = "crdbversions",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "tests",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_masterminds_semver_v3//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_masterminds_semver_v3//:go_default_library"],
)
