load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gke_lib",
    srcs = ["start_stop_gke.go"],
    importpath = "github.com/cockroachdb/cockroach-operator/hack/gke",
    visibility = ["//visibility:private"],
    deps = ["//pkg/testutil/exec"],
)

KUBETEST2 = "//hack/bin:kubetest2"

KUBETEST2GKE = "//hack/bin:kubetest2-gke"

go_binary(
    name = "gke",
    data = [
        KUBETEST2,
        KUBETEST2GKE,
    ],
    embed = [":gke_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
