load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "k8s_lib",
    srcs = ["verify_k8s_running.go"],
    importpath = "github.com/cockroachdb/cockroach-operator/hack/k8s",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/kube",
        "@com_github_cenkalti_backoff//:backoff",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/clientcmd",
        "@io_k8s_client_go//util/homedir",
        "@io_k8s_klog_v2//:klog",
    ],
)

go_binary(
    name = "k8s",
    embed = [":k8s_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
