load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["run.go"],
    importpath = "github.com/cockroachdb/cockroach-operator/hack/run",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/testutil/exec:go_default_library",
        "@io_k8s_sigs_kubetest2//pkg/process:go_default_library",
    ],
)

go_binary(
    name = "run",
    args = [
        "$(location //cmd/cockroach-operator:cockroach-operator)",
        "$(location //hack/bin:kind)",
    ],
    data = [
        "//cmd/cockroach-operator",
        "//hack/bin:kind",
        "//hack/bin:kubectl",
        "//hack/bin:kubetest2",
        "//hack/bin:kubetest2-kind",
        "//hack/bin:kustomize",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
