load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "steps.go",
    ],
    importpath = "github.com/cockroachdb/cockroach-operator/hack/smoketest",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_sigs_kubetest2//pkg/process:go_default_library"],
)

go_binary(
    name = "smoketest",
    data = [
        "//hack/bin:kind",
        "//hack/bin:kubectl",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["steps_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
