load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "versionbump_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach-operator/hack/versionbump",
    visibility = ["//visibility:private"],
    deps = ["@com_github_masterminds_semver_v3//:semver"],
)

go_binary(
    name = "versionbump",
    embed = [":versionbump_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
